--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -151,7 +151,7 @@ body {
     font-size: 28px;
     cursor: pointer;
     color: #ccc;
-    transition: color 0.3s, ease 0.2s ease;
+    transition: color 0.3s, ease;
     user-select: none;
 }
 
